--- a/DigitalentCoreApp/Views/Home/About.cshtml
+++ b/DigitalentCoreApp/Views/Home/About.cshtml
@@ -1,7 +1,30 @@
-﻿@{
-    ViewData["Title"] = "About";
-}
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+﻿@model IEnumerable<DigitalentCoreApp.Models.ConsultProjectViewModels.AssignmentGroup>
 
-<p>Use this area to provide additional information.</p>
+@{
+    ViewData["Title"] = "Consultant Statistics";
+}
+
+<h2>Consultant Statistics</h2>
+
+<table>
+    <tr>
+        <th>
+            Project name 
+        </th>
+        <th>
+            Consultants
+        </th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @item.Project.Name
+            </td>
+            <td>
+                @item.ConsultantCount
+            </td>
+        </tr>
+    }
+</table>
