update read me, listing by skills now available however not filtering

--- a/DigitalentCoreApp/Views/Consultants/Details.cshtml
+++ b/DigitalentCoreApp/Views/Consultants/Details.cshtml
@@ -15,7 +15,7 @@
             <div class="col-md-12">
                 <dl class="dl-horizontal">
                     <dt>
-                        @Html.DisplayNameFor(model => model.Photo)
+                        @Html.DisplayNameFor(model => model.Photo) ID
                     </dt>
                     <dd>
                         @Model.Photo.ID 
