--- a/DigitalentCoreApp/Views/Skills/Details.cshtml
+++ b/DigitalentCoreApp/Views/Skills/Details.cshtml
@@ -16,6 +16,42 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
+
+        <dt>
+            Consultants with this skill
+        </dt>
+        <dd>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>
+                            FirstName
+                        </th>
+                        <th>
+                            Last Name
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var consultantSkill in Model.ConsultantSkills)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => consultantSkill.Consultant.FirstName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => consultantSkill.Consultant.LastName)
+                            </td>
+                            <td>
+                                <a asp-controller="Consultants" asp-action="Edit" asp-route-id="@consultantSkill.Consultant.ID">Edit</a> |
+                                <a asp-controller="Consultants" asp-action="Details" asp-route-id="@consultantSkill.Consultant.ID">Details</a
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </dd>
     </dl>
 </div>
 <div>
