added projects crud, changed from about, small clean up

--- a/DigitalentCoreApp/Views/Home/About.cshtml
+++ b/DigitalentCoreApp/Views/Home/About.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Consultant Statistics";
 }
 
-<h2>Consultant Statistics</h2>
+<h2>Consultant Statistics current assignments</h2>
 
-<table>
+<table class="table">
     <tr>
         <th>
             Project name 
