--- a/DigitalentCoreApp/Views/Shared/_Layout.cshtml
+++ b/DigitalentCoreApp/Views/Shared/_Layout.cshtml
@@ -37,15 +37,11 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
-                    <li>
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a>
-                    </li>
                     <li class="nav-item">
-
                         <a class="nav-link" asp-area="" asp-controller="Consultants" asp-action="Index">Consultants</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Assignments" asp-action="Index">Assignments</a>
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">Assignments</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Projects" asp-action="Index">Projects</a>
