--- a/DigitalentCoreApp/Views/Skills/Details.cshtml
+++ b/DigitalentCoreApp/Views/Skills/Details.cshtml
@@ -45,7 +45,7 @@
                             </td>
                             <td>
                                 <a asp-controller="Consultants" asp-action="Edit" asp-route-id="@consultantSkill.Consultant.ID">Edit</a> |
-                                <a asp-controller="Consultants" asp-action="Details" asp-route-id="@consultantSkill.Consultant.ID">Details</a
+                                <a asp-controller="Consultants" asp-action="Details" asp-route-id="@consultantSkill.Consultant.ID">Details</a>
                             </td>
                         </tr>
                     }
@@ -55,6 +55,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">To Skill List</a>
 </div>
