--- a/DigitalentCoreApp/wwwroot/css/style.css
+++ b/DigitalentCoreApp/wwwroot/css/style.css
@@ -136,62 +136,6 @@ a {
 }
 
 
-
-.masthead {
-    display: table;
-    width: 100%;
-    height: auto;
-    padding: 200px 0;
-    text-align: center;
-    color: white;
-    /*background: url("../img/333h.jpg") no-repeat bottom center scroll;*/
-    /*background: url("../img/intro-bg.png") no-repeat bottom center scroll;*/
-    background: url("../img/black.jpg") no-repeat bottom center scroll;
-    background-color: black;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    /*position: relative;*/
-}
-
-    .masthead .intro-body {
-        display: table-cell;
-        vertical-align: middle;
-    }
-
-        .masthead .intro-body .brand-heading {
-            font-size: 50px;
-        }
-
-        .masthead .intro-body .intro-text {
-            font-size: 18px;
-        }
-/*.masthead .video-texture {
-    height: 3000px;
-    width: 100%;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    opacity: 0;
-    z-index: 10;
-  }*/
-
-@media (min-width: 768px) {
-    .masthead {
-        height: 100%;
-        padding: 0;
-    }
-
-        .masthead .intro-body .brand-heading {
-            font-size: 100px;
-        }
-
-        .masthead .intro-body .intro-text {
-            font-size: 22px;
-        }
-}
-
 .content-section {
     padding-top: 150px;
     padding-bottom: 150px;
@@ -201,3 +145,6 @@ a {
     padding-top: 90px;
 }
 
+.table ul {
+    list-style: none;
+}
